CHANGELOG
=========

LeftSide version 4.3 - october 2016
- some logical changes in div and class elements
- files style and header: changed #header into #sidebar
- files style and sidebar: changed #sidebar into #sidebar-widgets
- files style and header: changed .nav-widgettitle into .nav-head-title
- several small adjustments
- new screenshot

LeftSide version 4.2 - august 2016
- file functions: translation fix

LeftSide version 4.1 - august 2016
- file content-postmeta-single: display post format too
- updated text strings
- several small adjustments

LeftSide version 4.0 - august 2016
- cleanup: removed unnecessary white space from several files
- file style: removed unnecessary id tags from several strings
- file style: updated mobile stylesheet
- file style and custom-editor-style: several small adjustments
- file functions: updated feature for html5 support in ie 8 and older

LeftSide version 3.9 - june 2016
- files style and custom-editor-style: resized all headings (including line-height)
- file style: removed line-height from several elements

LeftSide version 3.7 - may 2016
- added file content-none 
- files 404, archive, index and search: relocated nothing found to separate file
- updated file index
- renamed both postmetadata files
- several small adjustments

LeftSide version 3.6 - may 2016
- theme now supports post formats
- file header: updated head section
- added file content-list 
- files archive, index and search: relocated part of loop to separate file
- file index en css: changed featured post notice
- file single: changed .page-title-post into .post-title-single
- changed .sticky into .sticky-title
- several small adjustments

LeftSide version 3.4 - april 2016
- resized all headings (thanks Tom)
- changed address tag display
- several small adjustments

LeftSide version 3.3 - march 2016
- localized mobile menu
- mobile menu now supports 2 level subpages

LeftSide version 3.2 - march 2016
- added file postmeta-single