@@ -8,43 +8,43 @@
 
 jQuery(document).ready(function() { 
 	// build <select> dropdown
-	jQuery("<select />").appendTo("div.nav-head");
+	jQuery("<select />").appendTo("div.nav-primary");
 
 	// create option Menu
 	jQuery("<option />", {
 		"selected": "selected",
 		"value": "",
 		"text": objectL10n.navText  
-	}).appendTo(".nav-head select");
+	}).appendTo(".nav-primary select");
 
 	// populate
-	jQuery(".nav-head ul li a").each(function() {
+	jQuery(".nav-primary ul li a").each(function() {
 		var el = jQuery(this);
-		if(el.parents(".nav-head ul ul ul").length) {
+		if(el.parents(".nav-primary ul ul ul").length) {
 			// if subpage level two
 			jQuery("<option />", {
 				"value": el.attr("href"),
 				"text":  "- - " + el.text()
-			}).appendTo(".nav-head select");
+			}).appendTo(".nav-primary select");
 		} 
-		else if(el.parents(".nav-head ul ul").length) {
+		else if(el.parents(".nav-primary ul ul").length) {
 			// if subpage level one
 			jQuery("<option />", {
 				"value": el.attr("href"),
 				"text":  "- " + el.text()
-			}).appendTo(".nav-head select");
+			}).appendTo(".nav-primary select");
 		} 
 		else { 
 			// if no subpage
 			jQuery("<option />", {
 				"value": el.attr("href"),
 				"text": el.text()
-			}).appendTo(".nav-head select");
+			}).appendTo(".nav-primary select");
 		}
 	});
 
 	// make links work 
-	jQuery(".nav-head select").change(function() { 
+	jQuery(".nav-primary select").change(function() { 
 		window.location = jQuery(this).find("option:selected").val();
 	});
 });
