@@ -9,7 +9,7 @@
 	<?php while (have_posts()) : the_post(); ?>
 
 		<div id="post-<?php the_ID(); ?>" <?php post_class(); ?>> 
-			<h1 class="post-title-single"><?php the_title(); ?></h1>
+			<h1 class="post-title-single entry-title"><?php the_title(); ?></h1>
 
 			<?php get_template_part( 'content-postmeta' ); ?>
 
@@ -17,11 +17,13 @@
 				<?php printf( '<a href="%1$s">%2$s</a>', esc_url( get_author_posts_url( get_the_author_meta( 'ID' ) ) ), get_avatar( get_the_author_meta( 'ID' ), 96 )  ); ?>
 			<?php } ?>
 	
-			<?php the_content(); ?>
+			<div class="entry-content">
+				<?php the_content(); ?>
 
-			<?php if ( $multipage ) { ?>
-				<div class="pagelink"><?php wp_link_pages(); ?></div>
-			<?php } ?> 
+				<?php if ( $multipage ) { ?>
+					<div class="pagelink"><?php wp_link_pages(); ?></div>
+				<?php } ?> 
+			</div>
 
 			<?php get_template_part( 'content-postmeta-single' ); ?>
 		</div>
@@ -32,3 +34,4 @@
 
 	<?php edit_post_link( __( 'Edit', 'leftside' ), '<div class="edit-link">', '</div>' ); ?>
 </div>
+<?php get_footer(); ?>
