@@ -1,11 +1,11 @@
 /*
 Theme Name: LeftSide
 Theme URI: http://www.guidovanderleest.nl/leftside
-Version: 4.3
+Version: 4.4
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: LeftSide is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
-Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, translation-ready
+Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, microformats, translation-ready
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: leftside
@@ -51,10 +51,6 @@ ol, ul {
 	list-style:none;
 }
 
-ul, li {
-
-
-}
 blockquote, q {
 	quotes:none;
 }
@@ -69,133 +65,28 @@ table {
 	border-spacing:0;
 }
 
-/* CUSTOM - CMR WP PARSI TREE MENU*/
-
-#menu-primary {
-	text-align: right;
-    width: 9rem;
-}
-
-.sub-menu {
-	text-align: left;
-	width: 8rem;
-}
-
-/*BOX AROUND MENU ITEMS*
-
-li:hover,
-li:focus,
-li:active {
-	text-decoration: none;
-	outline: 1px solid gainsboro;
-	display: inline;
-	cursor: pointer;
-}
-*/
 
 /* BODY AND CONTAINER */
-body {
-	background: white; 
-	font-family:'lato', sans-serif; 
-	font-weight: 300; 
-	font-size:.80em; 
-	color: black; 
-	line-height:1.5em; 
-	text-align:left; 
-	word-wrap:break-word;
+body {background:#eee; color:#333; font-family:'Open Sans', sans-serif; font-size:1em; line-height:1.5em; text-align:left; word-wrap:break-word;}
+#container {max-width:1200px; position:relative; background:#fff; margin:10px auto;}
+#container:after {content:''; display:block; height:0; clear:both;}
 
-}
-
-/*HIDE SCROLLBARS*/
-/*::-webkit-scrollbar {
-	width: 0;
-	background: transparent;
-}*/
-
-
-#container {
-	max-width:100%;
-	height: 100%; 
-	position:relative;  
-	margin:0px auto; 
-}
-
-@media screen and (max-width: 767px){
-	#container {
-		width:100%; 
-		margin:0 auto 0;
-		overflow-x: hidden;
-}
-}
-
-@media screen and (min-width:1125px) {
-	#container{
-	max-width:1125px;
-	border-left: 1px solid gainsboro;
-	border-right: 1px solid gainsboro;
-	}
-
-}
-
-#container:after {
-	content:''; 
-	display:block; 
-	height:0; 
-	clear:both;
-	height: 100%;
-
-}
 
 /* MAIN CONTENT AREA */
+#content {width:62%; float:right; padding:20px 2%;}
 
-#content {
-	width: 65%; 
-	float: right; 
-	padding-top: 100px;
-	padding-bottom: 0px;
-	padding-right: 25px;
-	margin: auto;
-}
-
-/*PHONE CONTENT SIZING*/
-@media screen and (max-width:767px) {
-	#content {
-		width:90%; 
-		padding: 0px 0;
-		height: 100%;
-		margin: auto;
-		float: none;
-	}
-
-}
-
-/* LAPTOP CONTENT SCROLL */
-@media screen and (min-width:767px) {
-	#content {
-	/* Custom - CMR */
-    height: 100%;
-    padding-right: 15px;
-	}
-}
-
-/*LAPTOP CONTENT SIZING*/
-@media screen and (min-width:820px) {
-	#content {
-		padding-right: 25px;
-	}
-}
 
 /* HEADINGS */
 h1 {font-size:2.25em; line-height:1.25em;}
 h2 {font-size:1.80em; line-height:1.25em;}
 h3 {font-size:1.45em; line-height:1.5em;}
-h4 {font-variant: small-caps; text-decoration: underline; font-size:1em; line-height:1.5em;}
+h4 {font-size:1.20em; line-height:1.5em;}
 h5 {font-size:1em; line-height:1.5em;}
 h6 {font-size:0.80em; line-height:2em;}
 
 
 /* LINKS AND HTML TAGS */
-a {text-decoration:none; color: black;}
+a {text-decoration:none; color:#e77776;}
 a:hover {text-decoration:underline;}
 
 strong, b {font-weight:bold;}
@@ -239,81 +130,53 @@ input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hove
 input[type="checkbox"] {-webkit-appearance:checkbox; -moz-appearance:checkbox;}
 input[type="radio"] {-webkit-appearance:radio; -moz-appearance:radio;}
 select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
+select option {background:#fff; color:#333;} 
 button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
-/* SIDEBAR */
-#sidebar {
-	max-width: 350px;
-	float:left; 
-	padding:0px; 
-	height: 100vh;
-	position: fixed;
-}
+/* INPUTS ON DARK BACKGROUND */
+#footer input, #footer select, #footer textarea {border:1px solid #ddd; color:#ddd;}
+#footer input[type="submit"], #footer input[type="reset"], #footer input[type="button"], #footer button {border:0; background:#ddd; color:#333;}
+#footer input[type="submit"]:hover, #footer input[type="reset"]:hover, #footer input[type="button"]:hover, #footer button:hover {background:#fff; color:#333;}
 
-/* SIDEBAR PHONE SIZING */
-@media screen and (max-width:767px){
-	#sidebar {
-		width:100%; 
-		padding:0; 
-		background:none;
-		height: 100%;
-		position: initial;
-	}
-}
+
+/* SIDEBAR */
+#sidebar {width:30%; float:left; padding:20px 2%; background:#f8f8f8;}
+
 
 /* SIDEBAR LOGO */
-.logo {
-	width: 100%; 
-	text-align:left; 
-	padding:0 0 0px;
-}
+.logo {width:100%; text-align:center; padding:0 0 20px;}
+.logo h1 a:hover {text-decoration:none; color:#333;}
+.logo h2 {padding:5px 0; font-size:1.45em;}
+.logo img {padding:10px 0 0;}
 
-.logo h1 a:hover {
-	text-decoration:none; 
-	color:#333;
-}
-.logo h2 {
-	padding:5px 0; 
-	font-size:1.45em;
-}
 
-@media screen and (max-width:931px){
-.logo {
-		padding: 0 0 0 0; 
-		width: 250px 
-	}
-}
+/* SIDEBAR MENU */
+.nav-primary {clear:both; padding:10px 0;}
+.nav-primary select {display:none;}
+.nav-primary ul {padding:0; margin:0; z-index:999; list-style:none;}
+.nav-primary ul li {position:relative; padding:0; margin:0;}
+.nav-primary ul li a {width:92%; padding:5px 4%; text-decoration:none; display:inline-block;}
+.nav-primary ul li:hover > a {text-decoration:none; background:#e77776; color:#fff;}
+.nav-primary .current_page_item > a, .nav-primary .current_page_parent > a {text-decoration:underline;}
+
+
+/* SIDEBAR SUBMENU */
+.nav-primary ul ul {display:none; position:absolute; left:100%; top:0;}
+.nav-primary ul ul ul {display:none; position:absolute; top:0; left:100%;}
+.nav-primary ul ul a {width:15em; padding:5px 10px; background:#666; color:#ddd;}
+.nav-primary ul li:hover > ul {display:block;}
+.nav-primary ul li ul li {margin:0;}
+
+
+/* SIDEBAR MENU TITLE */
+.nav-primary-title {background:#666; color:#ddd; padding:5px 15px; margin:0 0 10px;}
+
 
 /* WIDGETS */
-#sidebar-widgets {
-	width:80%; 
-	float:right;
-}
-
-@media screen and (max-width:1090px) {
-#sidebar-widgets {
-	float:left;
-}
-}
-
-@media screen and (max-width:920px) {
-#sidebar-widgets {
-	margin-left: -10px
-}
-}
-
-.widget {
-	padding:0px 0; 
-	margin: auto;
-}
-
-.widgettitle {
-	background:#666; 
-	color:#ddd; 
-	padding:5px 15px; 
-	margin:0 0 10px;
-}
+#sidebar-widgets {width:100%; float:left;}
+.widget {padding:10px 0; margin:0 0 10px;}
+.widgettitle {background:#666; color:#ddd; padding:5px 15px; margin:0 0 10px;}
 
 
 /* HEADER IMAGE */
@@ -326,17 +189,10 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* PAGE */
-.page-title {clear:both; padding:0 0 3px;}
+.page-title {clear:both; padding:0 0 10px;}
 .archive-description {display:block; font-style:italic;}
-.pagelink {clear:both; display:block; margin:20px 0 10px;}
- 	
+.pagelink {clear:both; display:block; padding:20px 0 10px;}
 
- }
-
- .splash-button{
- 	color: transparent;
- 	background: transparent;
- }
 
 /* POST */
 .post-list {width:100%; clear:both; float:left;}
@@ -393,45 +249,35 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 /* COMMENTS */
 #comments {width:100%; clear:both; float:left;}
-.comment-list {background:#f8f8f8; border:1px solid #ccc; border-radius:5px; font-weight:normal; margin:20px 0; padding:0 20px 0 10px;}
-.comment-list ol {list-style:none;}
-.comment-list li {list-style:none; margin:0 0 0 10px;}
-.comment-body {border-left:2px solid #e77776; padding:0 0 0 15px; margin:20px 0;}
+.comment-list, .comment-list .children {list-style:none; margin:0; padding:0;}
+.comment-list li {margin:0; padding:0;}
+.comment-list .children > li {margin:0 0 0 10px;}
+.comment-body {background:#f8f8f8; border:1px solid #ccc; border-radius:5px; padding:10px; margin:20px 0;}
+.comment-content {margin:10px 0;}
 .comment-notes, .form-allowed-tags {font-size:0.80em; padding:5px 0;}
 .comments-title, .comment-reply-title, .no-comments {clear:both; font-size:1.45em;} 
 .comment-author .avatar {margin:0 5px 0 0; border-radius:5px;}
 .bypostauthor .comment-content {font-style:italic;}
 .comment-awaiting-moderation {font-style:italic;}
 
+
+/* COMMENTS RESPOND */
 #respond {width:100%; clear:both;}
 .comment-form label {padding:0 0 5px; display:block;}
 .comment-form input, .comment-form textarea {width:80%;}
 .comment-form input[type="submit"] {width:auto;}
 
 
-/* COMMENT NAV */
+/* COMMENTS NAV */
 .comment-nav {width:100%; clear:both; float:left; display:block;}
-.comment-prev {float:left; padding:5px 0;}
-.comment-next {float:right; padding:5px 0;}
+.comment-prev {float:left; padding:10px 0;}
+.comment-next {float:right; padding:10px 0;}
 
 
 /* FOOTER */
-#footer {
-	width:100%; 
-	clear:both; 
-	float:right;
-
-}
-
-.site-info {
-	position:absolute;
-    left:0px;
-    bottom:30px;
-    height:30px;
-    width:100%;
-    padding:0 10px;
-	font-size: .8em;
-}
+#footer {width:100%; clear:both; float:left; background:#666; color:#ddd;}
+#footer a {color:#ddd;}
+.site-info {clear:both; text-align:center; padding:10px;}
 
 
 /* FOOTER WIDGET AREA */
@@ -444,113 +290,55 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 #footer .widgettitle {padding:0; background:none;}
 
 
-/* FOOTER INPUTS */
-#footer input, #footer select, #footer textarea {border:1px solid #ddd; color:#ddd;}
-#footer input[type="submit"], #footer input[type="reset"], #footer input[type="button"], #footer button {background:#ddd; color:#333;}
-#footer input[type="submit"]:hover, #footer input[type="reset"]:hover, #footer input[type="button"]:hover, #footer button:hover {background:#fff; color:#333;}
-
-
-
-
-/* PHONE STYLING */
-@media screen and (max-width:767px) {
-
+/* MOBILE */
+@media screen and (max-width:767px) { 
 	/* BODY AND CONTAINER */
-	body {
-		font-size:.75em; 
-		line-height:1.2em;
-		height: 100%;
-		overflow-y: scroll !important;
-	}
+	body {font-size:1em; line-height:1.2em;}
+	body.custom-background {background-image:none !important;}
+	#container {width:96%; padding:10px 2%; margin:0 auto 0;}
 
-	body.custom-background {
-		background-image:none !important;}
+	/* MAIN CONTENT AREA */
+	#content {width:100%; padding:10px 0;}
+
+	/* SIDEBAR */
+	#sidebar {width:100%; padding:0; background:none;}
 
 	/* SIDEBAR LOGO */
-	
-
-	.logo h1 {
-		font-size:2.25em;
-	}
-
-	.logo h2 {
-		padding:0; 
-		font-size:1.45em;
-	}
+	.logo {padding: 10px 0;}
+	.logo h1 {font-size:2.25em;}
+	.logo h2 {padding:0; font-size:1.45em;}
 
 	/* SIDEBAR MENU */
-	.nav-head ul {
-		display: none;
-	} 
-
-	.nav-head {
-		padding:0 0 10px;
-	}
-
-	.nav-head select {
-		display:block; 
-		width:100%; 
-		height:35px; 
-		margin:0 auto 0; 
-		font-size:1em; 
-		line-height:1.2em; 
-		color:#fff; 
-		background:#e77776; 
-		border:0;
-	}
-
+	.nav-primary ul {display: none;} 
+	.nav-primary {padding:0 0 10px;}
+	.nav-primary select {display:block; width:100%; height:35px; margin:0 auto 0; font-size:1em; line-height:1.2em; color:#fff; background:#e77776; border:0;}
 
 	/* SIDEBAR MENU TITLE */
-	.nav-head-title {
-		display:none;
-	}
+	.nav-primary-title {display:none;}
 
 	/* WIDGETS */
-	#sidebar-widgets {
-		width:90%; 
-		float:right;
-	}
-
-	.widget {
-		padding:20px 0; 
-		margin:0 0 5px;
-	}
-
+	.widget {padding:5px 0; margin:0 0 5px;}
 
 	/* HEADER IMAGE */
-	#header-image {
-		display:none;
-	}
+	#header-image {display:none;}
 
 	/* HEADER IMAGE MOBILE */
-	#header-image-mobile {
-		display:block; 
-		width:100%; 
-		float:left;
-	}
+	#header-image-mobile {display:block; width:100%; float:left;}
 
 	/* POST */
-	.postmetadata {
-		margin:10px 0;
-	}
+	.postmetadata {margin:10px 0;}
 
 	/* HEADINGS */
-	.post-title, .page-title, .post-title-single {
-		font-size:1em;
-	}
-	.widgettitle, .comments-title, .comment-reply-title, .no-comments {
-		font-size:1.45em;
-	}
+	.post-title, .page-title, .post-title-single {font-size:1.80em;}
+	.widgettitle, .comments-title, .comment-reply-title, .no-comments {font-size:1.45em;}
 
 	/* POST FORMATS */
-	.format-status .avatar {
-		margin:0.3em 0.5em 0.3em 0;
-	}
+	.format-status .avatar {margin:0.3em 0.5em 0.3em 0;}
 
 	/* IMAGES */
-	.wp-post-image, .single-image {
-		width:50%; 
-		margin:0.3em 0.5em 0.3em 0;
-	}
-}
+	.wp-post-image, .single-image {width:50%; margin:0.3em 0.5em 0.3em 0;}
 
+	/* FOOTER WIDGET AREA */
+	.footer-right, .footer-middle, .footer-left {width:94%; margin:0; padding:0 3%; float:left;} 
+	#footer .widget {padding:5px 0; margin:0 0 5px;}
+}
